Add gcp firestore to store user info

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@ Thumbs.db
 
 # 環境變數檔案（包含敏感資訊）
 .env
+.env.local
 application-local.yml
 
 GCLOUD_COMMANDS.md
 ARTIFACT_REGISTRY_EXPLAINED.md
+firestore-key.json
